[gd_scene load_steps=6 format=2]

[ext_resource path="res://undertale_battle_font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/TransitionFor2Players.gd" type="Script" id=2]
[ext_resource path="res://Sprites/reaching the next level.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.5, 56.5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="TransitionFor2Players" type="Sprite"]
z_index = -1
texture = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Trigger" type="Area2D" parent="."]
collision_layer = 536870912
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
position = Vector2( 58.5, -52.5 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -34.0
margin_top = -38.0
margin_right = 34.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 2 )
text = "Next Level"

[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="body_exited" from="Trigger" to="." method="_on_Trigger_body_exited"]
